--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,22 @@
 # Core dependencies
-flask>=2.0.0,<3.0.0
-gunicorn>=20.0.0,<21.0.0
-requests>=2.30.0,<3.0.0
-beautifulsoup4>=4.12.0,<5.0.0
-selenium>=4.9.0,<5.0.0
-python-dateutil>=2.8.0,<3.0.0
-webdriver-manager>=3.8.0,<4.0.0
+flask==2.0.1
+gunicorn==20.1.0
+flask-cors==3.0.10
+werkzeug==2.0.1
 
-# Google Cloud dependencies - use more flexible versioning
-google-cloud-storage
-google-cloud-secret-manager
-google-cloud-firestore
-google-cloud-bigquery
-firebase-admin
-google-cloud-logging
+# Web scraping
+requests==2.31.0
+beautifulsoup4==4.12.2
+selenium==4.10.0
+webdriver-manager==3.8.6
 
-# Google Maps API
-googlemaps>=4.0.0,<5.0.0
+# Date handling
+python-dateutil==2.8.2
 
-# OpenRouter for analysis
-openai>=1.0.0,<2.0.0
+# Google Cloud
+google-cloud-storage==2.9.0
+google-cloud-secretmanager>=2.0.0,<3.0.0
 
-# Misc utilities
-retrying>=1.3.0,<2.0.0
-validators>=0.20.0,<1.0.0
+# Utilities
+validators==0.22.0
+retrying==1.3.4
