--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,11 @@ python-dateutil==2.8.2
 
 # Google Cloud
 google-cloud-storage==2.9.0
-google-cloud-secretmanager>=2.0.0,<3.0.0
+google-cloud-secret-manager==2.16.1
+google-cloud-firestore==2.11.1
+google-cloud-bigquery==3.10.0
+firebase-admin==6.1.0
+google-cloud-logging==3.5.0
 
 # Utilities
 validators==0.22.0
