--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,20 @@
 # Core dependencies
-flask==2.0.1
+Flask==2.2.3
+google-cloud-storage==2.7.0
+requests==2.28.2
+beautifulsoup4==4.11.2
+pandas==1.5.3
+selenium==4.8.2
+webdriver-manager==3.8.5
 gunicorn==20.1.0
-flask-cors==3.0.10
-werkzeug==2.0.1
 
-# Web scraping
-requests==2.31.0
-beautifulsoup4==4.12.2
-selenium==4.10.0
-webdriver-manager==3.8.6
+# API clients
+google-api-python-client==2.77.0
+google-auth==2.16.2
 
-# Date handling
-python-dateutil==2.8.2
-
-# Google Cloud
-google-cloud-storage==2.9.0
-google-cloud-secret-manager==2.16.1
-google-cloud-firestore==2.11.1
-google-cloud-bigquery==3.10.0
-firebase-admin==6.1.0
-google-cloud-logging==3.5.0
+# Async
+aiohttp==3.8.4
+asyncio==3.4.3
 
 # Utilities
-validators==0.22.0
-retrying==1.3.4
+python-dotenv==1.0.0
