--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,8 +1,7 @@
 steps:
   # Build the container image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/milescrape:$COMMIT_SHA', '.']
-    timeout: '1800s'
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/milescrape:$COMMIT_SHA', './dockerfile']
   
   # Push the container image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
@@ -22,7 +21,3 @@ steps:
 
 images:
   - 'gcr.io/$PROJECT_ID/milescrape:$COMMIT_SHA'
-
-timeout: '2400s'
-options:
-  machineType: 'N1_HIGHCPU_8'
