--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,8 @@
 steps:
   # Build the container image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/milescrape:$COMMIT_SHA', './dockerfile']
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/milescrape:$COMMIT_SHA', '.']
+    timeout: '1800s'
   
   # Push the container image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
@@ -13,11 +14,22 @@ steps:
     args:
     - 'run'
     - 'deploy'
-    - 'milescrape'
+    - 'milestone-lead-generator'
     - '--image=gcr.io/$PROJECT_ID/milescrape:$COMMIT_SHA'
     - '--region=us-central1'
     - '--platform=managed'
     - '--allow-unauthenticated'
+    - '--port=8080'
+    - '--cpu=1'
+    - '--memory=512Mi'
+    - '--timeout=300s'
+    - '--min-instances=0'
+    - '--max-instances=10'
+    - '--set-env-vars=PORT=8080'
 
 images:
   - 'gcr.io/$PROJECT_ID/milescrape:$COMMIT_SHA'
+
+timeout: '2400s'
+options:
+  machineType: 'N1_HIGHCPU_8'
